--- a/ExtApp/ExtApp.BLL/ExtApp.BLL.csproj
+++ b/ExtApp/ExtApp.BLL/ExtApp.BLL.csproj
@@ -128,6 +128,7 @@
     <Compile Include="BaseBLL.cs" />
     <Compile Include="Core\ConfigBLL.cs" />
     <Compile Include="Core\ConfigSectionBLL.cs" />
+    <Compile Include="Core\DatabaseBackupBLL.cs" />
     <Compile Include="Core\DicBLL.cs" />
     <Compile Include="Core\DicItemBLL.cs" />
     <Compile Include="Core\LogBLL.cs" />
