--- a/ExtApp/ExtApp.Model/ExtApp.Model.csproj
+++ b/ExtApp/ExtApp.Model/ExtApp.Model.csproj
@@ -95,9 +95,11 @@
     <Compile Include="Authority\View\MenuEditParam.cs" />
     <Compile Include="Authority\View\RoleEditParam.cs" />
     <Compile Include="Authority\View\RoleListParam.cs" />
+    <Compile Include="Core\DatabaseBackup.cs" />
     <Compile Include="Core\View\ConfigEditParam.cs" />
     <Compile Include="Core\View\ConfigSectionNode.cs" />
     <Compile Include="Core\View\ConfigSectionParam.cs" />
+    <Compile Include="Core\View\DatabaseBackupParam.cs" />
     <Compile Include="Core\View\DicEditParam.cs" />
     <Compile Include="Core\View\DicItemEditParam.cs" />
     <Compile Include="Core\View\DicNode.cs" />
