--- a/ExtApp/ExtApp.Web/Web.config
+++ b/ExtApp/ExtApp.Web/Web.config
@@ -16,6 +16,11 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
 
+  <!-- 连接字符串 -->
+  <connectionStrings>
+    <add name="ExtApp" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=D:\github\ExtApp\ExtApp\ExtApp.Web\App_Data\ExtApp.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+
   <!-- 应用程序配置 -->
   <appSettings></appSettings>
 
