还原数据库增加蒙版

--- a/ExtApp/ExtApp.Web/ExtApp.Web.csproj
+++ b/ExtApp/ExtApp.Web/ExtApp.Web.csproj
@@ -246,6 +246,9 @@
     </Content>
     <Content Include="App_Data\ExtApp.mdf" />
     <Content Include="App_Data\ExtApp.sql" />
+    <Content Include="App_Data\ExtApp_log.ldf">
+      <DependentUpon>ExtApp.mdf</DependentUpon>
+    </Content>
     <Content Include="css\desktop.css" />
     <Content Include="ext\AbstractManager.js" />
     <Content Include="ext\Ajax.js" />
