--- a/ExtApp/ExtApp.Web/Web.config
+++ b/ExtApp/ExtApp.Web/Web.config
@@ -18,7 +18,7 @@
 
   <!-- 连接字符串 -->
   <connectionStrings>
-    <add name="ExtApp" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=D:\github\ExtApp\ExtApp\ExtApp.Web\App_Data\ExtApp.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ExtApp" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ExtApp.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <!-- 应用程序配置 -->
