菜单管理修改

--- a/ExtApp/ExtApp.Web/ExtApp.Web.csproj
+++ b/ExtApp/ExtApp.Web/ExtApp.Web.csproj
@@ -174,8 +174,8 @@
     <Content Include="app\store\personnel\DeptTree.js" />
     <Content Include="app\store\core\Config.js" />
     <Content Include="app\util\TreeHistory.js" />
-    <Content Include="app\view\authority\menu\Add.js" />
-    <Content Include="app\view\authority\menu\AddController.js" />
+    <Content Include="app\view\authority\menu\Edit.js" />
+    <Content Include="app\view\authority\menu\EditController.js" />
     <Content Include="app\view\authority\menu\List.js" />
     <Content Include="app\view\authority\menu\ListController.js" />
     <Content Include="app\view\core\databaseBackup\List.js" />
