--- a/ExtApp/ExtApp.Web/Web.config
+++ b/ExtApp/ExtApp.Web/Web.config
@@ -18,7 +18,7 @@
 
   <!-- 连接字符串 -->
   <connectionStrings>
-    <add name="ExtApp" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ExtApp.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ExtApp" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ExtApp;User Id=sa;Password=sa2017;Integrated Security=True;Connect Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <!-- 应用程序配置 -->
@@ -27,9 +27,9 @@
   <!-- Hibernate配置 -->
   <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
     <session-factory>
-      <property name="dialect">NHibernate.Dialect.MsSql2008Dialect</property>
+      <property name="dialect">NHibernate.Dialect.MsSql2012Dialect</property>
       <property name="connection.provider">NHibernate.Connection.DriverConnectionProvider</property>
-      <property name="connection.connection_string">Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ExtApp.mdf;Integrated Security=True;Connect Timeout=30</property>
+      <property name="connection.connection_string">Data Source=.\SQLEXPRESS;Initial Catalog=ExtApp;User Id=sa;Password=sa2017;Integrated Security=True;Connect Timeout=30;</property>
       <property name="show_sql">true</property>
       <property name="format_sql">true</property>
       <property name="hbm2ddl.auto">update</property>
