--- a/ExtApp/ExtApp.DAL/ExtApp.DAL.csproj
+++ b/ExtApp/ExtApp.DAL/ExtApp.DAL.csproj
@@ -87,7 +87,7 @@
   <ItemGroup>
     <Compile Include="Authority\RoleDAL.cs" />
     <Compile Include="Authority\MenuDAL.cs" />
-    <Compile Include="Authority\DeptRoleMenuDAL.cs" />
+    <Compile Include="Authority\RoleMenuDAL.cs" />
     <Compile Include="BaseDAL.cs" />
     <Compile Include="Core\ConfigSectionDAL.cs" />
     <Compile Include="Core\ConfigDAL.cs" />
