--- a/ExtApp/ExtApp.BLL/ExtApp.BLL.csproj
+++ b/ExtApp/ExtApp.BLL/ExtApp.BLL.csproj
@@ -122,7 +122,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Authority\DeptRoleMenuBLL.cs" />
+    <Compile Include="Authority\RoleMenuBLL.cs" />
     <Compile Include="Authority\MenuBLL.cs" />
     <Compile Include="Authority\RoleBLL.cs" />
     <Compile Include="BaseBLL.cs" />
