角色改为字典

--- a/ExtApp/ExtApp.Web/ExtApp.Web.csproj
+++ b/ExtApp/ExtApp.Web/ExtApp.Web.csproj
@@ -172,6 +172,7 @@
     <Content Include="app\store\core\DicTree.js" />
     <Content Include="app\store\core\DatabaseBackup.js" />
     <Content Include="app\store\authority\RoleMenuTree.js" />
+    <Content Include="app\store\dic\Sex.js" />
     <Content Include="app\store\dic\Style.js" />
     <Content Include="app\store\dic\DeptType.js" />
     <Content Include="app\store\dic\Theme.js" />
