--- a/ExtApp/ExtApp.Web/ExtApp.Web.csproj
+++ b/ExtApp/ExtApp.Web/ExtApp.Web.csproj
@@ -172,6 +172,7 @@
     <Content Include="app\store\core\DicTree.js" />
     <Content Include="app\store\core\DatabaseBackup.js" />
     <Content Include="app\store\authority\RoleMenuTree.js" />
+    <Content Include="app\store\dic\DicType.js" />
     <Content Include="app\store\dic\LogLevel.js" />
     <Content Include="app\store\dic\LogSource.js" />
     <Content Include="app\store\dic\LogType.js" />
