--- a/ExtApp/ExtApp.Web/Web.config
+++ b/ExtApp/ExtApp.Web/Web.config
@@ -61,7 +61,7 @@
       <!--控制级别，由低到高: ALL|DEBUG|INFO|WARN|ERROR|FATAL|OFF-->
       <!--比如定义级别为INFO，则INFO级别向下的级别，比如DEBUG日志将不会被记录-->
       <!--如果没有定义LEVEL的值，则缺省为DEBUG-->
-      <level value="INFO"/>
+      <level value="WARN"/>
       <appender-ref ref="RollingFileAppender"/>
     </root>
     <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
