--- a/ExtApp/ExtApp.Model/ExtApp.Model.csproj
+++ b/ExtApp/ExtApp.Model/ExtApp.Model.csproj
@@ -130,6 +130,11 @@
     <Compile Include="Enum\LogType.cs" />
     <Compile Include="Authority\Role.cs" />
     <Compile Include="Personnel\User.cs" />
+    <Compile Include="Workflow\WorkflowEvent.cs" />
+    <Compile Include="Workflow\WorkflowInstance.cs" />
+    <Compile Include="Workflow\WorkflowLine.cs" />
+    <Compile Include="Workflow\WorkflowNode.cs" />
+    <Compile Include="Workflow\Workflow.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
