修改日志文件位置

--- a/ExtApp/ExtApp.Web/Web.config
+++ b/ExtApp/ExtApp.Web/Web.config
@@ -66,7 +66,7 @@
     </root>
     <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
       <!--日志文件名开头-->
-      <file value="Logs\ExtApp.txt"/>
+      <file value="..\Logs\ExtApp.txt"/>
       <!--多线程时采用最小锁定-->
       <lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
       <!--日期的格式，每天换一个文件记录，如不设置则永远只记录一天的日志，需设置-->
