html页面打开ExtJs类

--- a/ExtApp/ExtApp.Web/ExtApp.Web.csproj
+++ b/ExtApp/ExtApp.Web/ExtApp.Web.csproj
@@ -155,7 +155,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app\App.js" />
-    <Content Include="app\index.html" />
+    <Content Include="iframe.html" />
     <Content Include="app\model\core\DicItem.js" />
     <Content Include="app\model\core\Dic.js" />
     <Content Include="app\model\core\ConfigSection.js" />
