工作流列表

--- a/ExtApp/ExtApp.Web/ExtApp.Web.csproj
+++ b/ExtApp/ExtApp.Web/ExtApp.Web.csproj
@@ -155,6 +155,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app\App.js" />
+    <Content Include="app\model\workflow\Workflow.js" />
+    <Content Include="app\store\workflow\Workflow.js" />
     <Content Include="app\view\workflow\design\app.js" />
     <Content Include="app\view\workflow\design\config\editor-commons.xml" />
     <Content Include="app\view\workflow\design\config\keyhandler-commons.xml" />
@@ -329,6 +331,8 @@
     <Content Include="app\view\workflow\design\images\zoomout.gif" />
     <Content Include="app\view\workflow\design\index.html" />
     <Content Include="app\view\workflow\design\config\workfloweditor.xml" />
+    <Content Include="app\view\workflow\design\List.js" />
+    <Content Include="app\view\workflow\design\ListController.js" />
     <Content Include="app\view\workflow\design\resources\app.txt" />
     <Content Include="app\view\workflow\design\resources\app_zh.txt" />
     <Content Include="iframe.html" />
