--- a/ExtApp/ExtApp.Controllers/ExtApp.Controllers.csproj
+++ b/ExtApp/ExtApp.Controllers/ExtApp.Controllers.csproj
@@ -105,7 +105,7 @@
   <ItemGroup>
     <Compile Include="Authority\RoleMenuController.cs" />
     <Compile Include="Authority\MenuController.cs" />
-    <Compile Include="Core\FileController.cs" />
+    <Compile Include="Core\FilesController.cs" />
     <Compile Include="Core\ConfigController.cs" />
     <Compile Include="Core\ConfigSectionController.cs" />
     <Compile Include="Core\DatabaseBackupController.cs" />
@@ -118,6 +118,8 @@
     <Compile Include="Personnel\UserController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Workflow\WorkflowController.cs" />
+    <Compile Include="Work\MessageReceiveController.cs" />
+    <Compile Include="Work\MessageController.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
