--- a/ExtApp/ExtApp.DAL/ExtApp.DAL.csproj
+++ b/ExtApp/ExtApp.DAL/ExtApp.DAL.csproj
@@ -89,7 +89,7 @@
     <Compile Include="Authority\MenuDAL.cs" />
     <Compile Include="Authority\RoleMenuDAL.cs" />
     <Compile Include="BaseDAL.cs" />
-    <Compile Include="Core\FileDAL.cs" />
+    <Compile Include="Core\FilesDAL.cs" />
     <Compile Include="Core\ConfigSectionDAL.cs" />
     <Compile Include="Core\ConfigDAL.cs" />
     <Compile Include="Core\DatabaseBackupDAL.cs" />
@@ -100,6 +100,8 @@
     <Compile Include="Personnel\DeptDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Workflow\WorkflowDAL.cs" />
+    <Compile Include="Work\MessageReceiveDAL.cs" />
+    <Compile Include="Work\MessageDAL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ExtApp.AppBase\ExtApp.AppBase.csproj">
