--- a/ExtApp/ExtApp.Web/ExtApp.Web.csproj
+++ b/ExtApp/ExtApp.Web/ExtApp.Web.csproj
@@ -155,6 +155,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app\App.js" />
+    <Content Include="app\map\mapDraw.html" />
     <Content Include="app\model\workflow\Workflow.js" />
     <Content Include="app\model\work\MessageReceive.js" />
     <Content Include="app\model\work\Message.js" />
